# masters-thesis

./: .gitignore  LaTeX-wordlist.txt  Makefile  README.md  makefile
.github/actions/spelling/: only.txt
.github/actions/spelling/allow/: Domain-Terms.txt  Programming.txt  SGM-Tools.txt  Spin.txt  institutional.txt
.github/actions/spelling/patterns/: latex.txt  (+1 more)
.github/workflows/: haskell.yaml
data/benchmark-series/: benchmark-series.script  benchmark-series.sh  benchmark-series.template
data/make/: batching.mk  cluster.mk  compile.mk  constants.mk  infostr.mk  manuscript.mk  parameters.mk  parser.mk  presentation.mk  properties.mk  results.mk  sources.mk  transpile.mk
data/marshalcy/: subdivision.config
data/pbs/: pbs.defaults  pbs.template
doc/: CHANGELOG.md  Image-Reuse.md  LICENSE  README.md  REVISIONS.md  TIMELINE.md  mandate.config
doc/marshalcy/: preeminent.config
doc/onboarding/: Code_of_Conduct.md  Contributing.md
doc/overview/: Project.md
src/: Oracles.promela  makefile
src/TreeKEM/: treeKEM.promela
src/hs/: BinaryUnit.hs  ExtractedRow.hs  Parser.hs  cabal.project  parse-table-row.cabal  parse-table-row.hs  thesis-utilities.cabal
src/hs/app/: cluster-send-batch.hs  parse-mem-spec.hs  parse-table-row.hs
src/hs/src/Thesis/: BinaryUnit.hs  ExtractedRow.hs
src/hs/src/Thesis/Batch/: Catalog.hs  Invoker.hs  Mandate.hs  Printer.hs  Scanner.hs  Tabular.hs
src/hs/src/Thesis/Batch/Catalog/: LTL.hs  Option.hs  Parameter.hs  Size.hs  Time.hs  UseDFA.hs
src/hs/src/Thesis/Batch/Invoker/: SubProcess.hs
src/hs/src/Thesis/Batch/Mandate/: Type.hs
src/hs/src/Thesis/Batch/Printer/: Class.hs
src/hs/src/Thesis/Batch/Scanner/: Fault.hs
src/hs/src/Thesis/Batch/Tabular/: Bounding.hs  Cell.hs  Class.hs  Numeric.hs
src/hs/src/Thesis/Parser/: Row.hs
src/md/thesis/: chapter01.md  chapter02.md  schema.md
src/mk/: batching.mk  cluster.mk  compile.mk  constants.mk  infostr.mk  manuscript.mk  parameters.mk  parser.mk  presentation.mk  properties.mk  results.mk  sources.mk  transpile.mk
src/model/: Bit-Array.pml  CGKA-Security-Game.pml  Global-State.pml  LTL-FSU.pml  LTL-HLT.pml  LTL-PCS.pml  Oracles.pml  Parameterized-Constants.pml  Pop-Count.pml  Printing.pml  Selection.pml  TreeKEM-v1.pml  TreeKEM-v2.pml
src/model/Bitpack/: Bit-Array.pml  Equivalence-Check.pml  Makefile  Pop-Count.pml
src/pbs/: pbs.defaults  pbs.script  pbs.template
src/pml/: Bit-Array.pml  CGKA-Security-Game.pml  Global-State.pml  LTL-FSU.pml  LTL-HLT.pml  LTL-PCS.pml  Model-Specification.pml  Nondeterministic-Selection.pml  Oracles.pml  Parameterized-Constants.pml  Parameterized-Properties.pml  Pop-Count.pml  Printing.pml  Selection.pml  State-Global.pml  State-Networking.pml  TreeKEM-v1.pml  global-state.pml  model-specification.pml
src/pml/twiddle-testing/: TwiddlePopcountByte.pml
src/publication/: abstract-only.tex  manuscript-VECoS.tex  references.bib
src/publication/auxiliary/: copyrights.tex  figure-styles.tex  observations.tex  preamble.tex  shorthand.tex
src/publication/figures/: CGKA-Adversarial-Driven.tex  CGKA-Concession.tex  CGKA-Direct.tex  CGKA-Markovian.tex  CGKA-Parameterized.tex  CGKA-Progressing.tex
src/slides/: slides.md
src/slides/assets/: CGKA-Oracles.eps  CGKA-TreeKEM-Secrets.eps  references.bib
src/thesis/: README.md  frontmatter.tex  include-header.tex  metadata.yaml  references.bib  references.md  thesis.tex  titlepage.tex
src/thesis/auxiliary/: abbreviations.tex  abreviations.tex  figure-styles.tex  metadata.tex  observations.tex  preamble.tex  references.bib  shorthand.tex
src/thesis/chapters/: chapter01.tex  chapter02.tex  chapter03.tex  chapter04.tex  chapter05.tex  chapter06.tex
src/thesis/figures/: CGKA-Informal.tex  CGKA-Oracles.eps  CGKA-Original.tex  CGKA-TreeKEM-Secrets.eps  Secure-Group-Messaging-Timeline.tex  Secure-Group-Messaging.tex  Secure-Messaging-Send.tex  Secure-Messaging-Timeline.tex  Secure-Messaging.tex  flow-chart.tex  venn-protocols.tex
src/thesis/md/: chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md
src/thesis/png/: venn-protocols.tex
src/thesis/tables/: constants-from-parameters.tex  lengths-V1-state-vector-PRELIM.tex  lengths-V2-state-vector-PRELIM.tex  model-param-domain.tex  results-V1-FSU-PRELIM.tex  results-V1-HLT-PRELIM.tex  results-V1-PCS-PRELIM.tex  results-V2-FSU-PRELIM.tex  results-V2-HLT-PRELIM.tex  results-V2-PCS-PRELIM.tex  runtime-prediction-V1.tex  runtime-prediction-cpucycles-V1.tex  runtime-prediction-wallclock-V1.tex  state-vector-byte-length-PRELIM.tex  tabular-legend.tex  verification-hypotheses.tex
src/thesis/tex/: backmatter.tex  frontmatter.tex  include-header.tex
src/trails/: README.md
src/transfer/: makefile
src/transfer/pbs/: makefile  pbs.defaults  pbs.script  pbs.template
src/utilities/: cabal.project  thesis-utilities.cabal
src/utilities/app/: cluster-send-batch.hs  parse-benchmark-output.hs
src/utilities/lib/bench-parser/Parser/: BenchScript.hs  SPIN.hs
src/utilities/lib/bench-parser/Parser/BenchScript/: Types.hs
src/utilities/lib/catalog/Thesis/: Catalog.hs
src/utilities/lib/catalog/Thesis/Catalog/: LTL.hs  Membership.hs  Option.hs  Parameter.hs  Protocol.hs  Size.hs  Time.hs  UseDFA.hs
src/utilities/lib/measure/Thesis/Measure/: Benchmark.hs  Memory.hs  Outcome.hs  Runtime.hs  VerificationError.hs
src/utilities/lib/measure/Thesis/Measure/Benchmark/: File.hs  Set.hs
src/utilities/src/Parser/: BenchScript.hs  Internal.hs
src/utilities/src/Parser/BenchScript/: Types.hs
src/utilities/src/Parser/SPIN/: BackMatter.hs  FrontMatter.hs  RuntimeBody.hs  Types.hs
src/utilities/src/Thesis/: ExtractedRow.hs
src/utilities/src/Thesis/Batch/: Printer.hs  Scanner.hs
src/utilities/src/Thesis/Batch/Catalog/: LTL.hs  Parameter.hs  Size.hs  UseDFA.hs
src/utilities/src/Thesis/Batch/Mandate/: Type.hs
src/utilities/src/Thesis/Batch/Printer/: Class.hs
src/utilities/src/Thesis/Batch/Tabular/: Bounding.hs  CellEntry.hs  Numeric.hs
src/utilities/src/Thesis/Benchmark/: Set.hs
tex/: thesis-refs.bib  washburn-MLS-verification.tex
