Cabal-Version:      3.0
Name:               thesis-utilities
Version:            1.0.0
Stability:          Stable
Build-Type:         Simple
Tested-With:
  GHC == 9.2.2
  GHC == 9.4.4

Author:             Alex Washburn
Copyright:          (c) Alex Washburn 2022
License:            BSD-3-Clause
License-File:       LICENSE

Synopsis:           Parse a table row from Spin log file
Category:           Parsers
Description:        Same as Synopsis

Common language

  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    NoGeneralizedNewtypeDeriving

  default-language:
    GHC2021


Executable cluster-send-batch

  import:
    language

  main-is:
    cluster-send-batch.hs

  build-depends:
    base >=4.16 && <5,
    cluster-batch,
    mtl,
    text,
    validation,

  hs-source-dirs:
    app,

  other-modules:
    Paths_thesis_utilities


Library cluster-batch

  import:
    language

  build-depends:
    thesis-utilities:thesis-catalog,
    base >=4.16 && <5,
    commonmark,
    commonmark-extensions,
    commonmark-pandoc,
    containers,
    indexed-traversable,
    matrices,
    pandoc-types >= 1.23,
    mtl,
    process,
    text,
    text-builder-linear,
    validation,
    vector,

  hs-source-dirs:
    app,
    src,

  autogen-modules:
    Paths_thesis_utilities

  exposed-modules:
    Thesis.Batch.Invoker
    Thesis.Batch.Mandate
    Thesis.Batch.Printer
    Thesis.Batch.Scanner
    Thesis.Batch.Tabular

  other-modules:
    Paths_thesis_utilities
    Thesis.Batch.Invoker.SubProcess
    Thesis.Batch.Mandate.Type
    Thesis.Batch.Printer.Class
    Thesis.Batch.Scanner.Fault
    Thesis.Batch.Tabular.Bounding
    Thesis.Batch.Tabular.CellEntry
    Thesis.Batch.Tabular.Class
    Thesis.Batch.Tabular.Numeric
    Thesis.BinaryUnit

  visibility:
    private


Library thesis-bench-parser

  import:
    language

  build-depends:
    thesis-utilities:thesis-catalog,
    base >=4.16 && <5,
    bytestring,
    cassava,
    containers,
    deepseq,
    directory >= 1.3.8.1,
    filepath >= 1.4.100.3,
    megaparsec,
    parser-combinators,
    scientific,
    text,
    validation,
    vector,

  default-extensions:
    ApplicativeDo

  hs-source-dirs:
    lib/bench-parser

  autogen-modules:
    Paths_thesis_utilities

  exposed-modules:
    Parser.BenchScript
    Parser.SPIN

  other-modules:
    Parser.BenchScript.Types
    Parser.Internal
    Parser.SPIN.BackMatter
    Parser.SPIN.FrontMatter
    Parser.SPIN.RuntimeBody
    Parser.SPIN.Types
    Paths_thesis_utilities

  visibility:
    private


-- Core types
Library thesis-catalog

  import:
    language

  build-depends:
    base >=4.16 && <5,
    containers,
    deepseq,
    vector,

  hs-source-dirs:
    lib/catalog

  autogen-modules:
    Paths_thesis_utilities

  exposed-modules:
    Thesis.Catalog
    Thesis.Catalog.LTL
    Thesis.Catalog.Membership
    Thesis.Catalog.Option
    Thesis.Catalog.Parameter
    Thesis.Catalog.Protocol
    Thesis.Catalog.UseDFA
    Thesis.Catalog.Size
    Thesis.Catalog.Time

  other-modules:
    Paths_thesis_utilities

  visibility:
    private


Library thesis-measure

  import:
    language

  build-depends:
    thesis-utilities:thesis-bench-parser,
    thesis-utilities:thesis-catalog,
    base >=4.16 && <5,
    bytestring,
    cassava,
    containers,
    deepseq,
    directory >= 1.3.8.1,
    filepath >= 1.4.100.3,
    megaparsec,
    text,
    time,
    vector,

  hs-source-dirs:
    lib/measure

  autogen-modules:
    Paths_thesis_utilities

  exposed-modules:
    Thesis.Measure.Benchmark
    Thesis.Measure.Benchmark.Set
    Thesis.Measure.Benchmark.File
--    Thesis.Measure.Memory
--    Thesis.Measure.Runtime
--    Thesis.Measure.VerificationError

  other-modules:
    Paths_thesis_utilities

  visibility:
    private


Executable parse-table-row

  main-is:
    parse-table-row.hs

  build-depends:
    base >=4.16 && <5,
    bytestring,
    cassava,
    megaparsec,
    scientific,
    time,

  default-extensions:
    NoGeneralizedNewtypeDeriving

  default-language:
    GHC2021

  hs-source-dirs:
    app,
    src,

  other-modules:
    Paths_thesis_utilities
    Thesis.BinaryUnit
    Thesis.ExtractedRow
    Thesis.Parser.Row


Executable parse-benchmark-output

  import:
    language

  main-is:
    parse-benchmark-output.hs

  build-depends:
    thesis-utilities:thesis-bench-parser,
    thesis-utilities:thesis-catalog,
    thesis-utilities:thesis-measure,
    base >=4.16 && <5,
    bytestring,
    cassava,
    containers,
    deepseq,
    directory >= 1.3.8.1,
    filepath >= 1.4.100.3,
    megaparsec,
    parser-combinators,
    scientific,
    text,
    validation,
    vector,

  hs-source-dirs:
    app,
